force-app/main/default/objects/CatOrderMaster__c/CatOrderMaster__c.object-meta.xml
<CustomObject>
    <description>Master object, with CatOrder__c records as details</description>
    <label>Cat Order Master</label>
    <nameField>
        <label>Cat Order Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cat Order Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>