force-app/main/default/objects/CatOrderMaster__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cat Order Masters</relationshipLabel>
    <relationshipName>Cat_Order_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>