force-app/main/default/objects/CatOrderMaster__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cat Order Masters</relationshipLabel>
    <relationshipName>Cat_Order_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>