force-app/main/default/objects/CatOrderMaster__c/fields/GrandTotal__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal__c</fullName>
    <label>Grand Total</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>