force-app/main/default/objects/CatOrderMaster__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <label>Tax Amount</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>