force-app/main/default/objects/CatOrderMaster__c/fields/TaxLabel__c.field-meta.xml
<CustomField>
    <fullName>TaxLabel__c</fullName>
    <description>e.g. NY (4.56%)</description>
    <label>Tax Label</label>
    <length>14</length>
    <type>Text</type>
</CustomField>